--- a/.github/workflows/github-action-demo.yml
+++ b/.github/workflows/github-action-demo.yml
@@ -8,8 +8,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
       - run: cd backend
-      - run: npm i
-      - run: npm run build
+      - run: cd backend && npm i
+      - run: cd backend && npm run build
       - name: Check out repository code
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
