--- a/.github/workflows/github-action-demo.yml
+++ b/.github/workflows/github-action-demo.yml
@@ -5,16 +5,33 @@ jobs:
   compile:
     runs-on: ubuntu-latest
     steps:
+      - name: Cache Node Modules
+        id: Cache
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: node-modules-cache
+
       - name: Checkout
         uses: actions/checkout@v1
-      - run: cd backend
-      - run: cd backend && npm i
-      - run: cd backend && npm run build
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 16.x
+      
+      - name: Install Deps
+        run: cd backend && npm i
+
+      - name: Build
+        run: cd backend && npm run build
+
+      - name: Generate Artifact
+        run: cd backend/build && zip -r artifact.zip ./ -x '*.git*'
+
+      - name: Store Artifact
+        uses: actions/upload-artifact/@v2
+        with:
+          name: backend-artifact
+          path: backend/build/artifact.zip
+
